--- a/assets/css/multiverse.css
+++ b/assets/css/multiverse.css
@@ -86,7 +86,11 @@ html {
 }
 
 body {
-	background: #242629;
+	background-color: #2e3141;
+	background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+	background-size: auto, cover;
+	background-attachment: fixed, fixed;
+	background-position: center, center;
 }
 
 body.is-preload *, body.is-preload *:before, body.is-preload *:after {
