--- a/assets/css/multiverse.css
+++ b/assets/css/multiverse.css
@@ -1,3 +1,5 @@
+@import "common.css";
+
 @-moz-keyframes spinner {
 	0% {
 		-moz-transform: rotate(0deg);
@@ -40,33 +42,6 @@
 	}
 }
 
-html, body, div, span, h1, h2, h3, h4, h5, h6, p,
-a, small, ul, li, label, article,
-footer, header, nav, section {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-article, footer, header, nav, section {}
-	display: block;
-}
-
-body {
-	line-height: 1;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-body {
-	-webkit-text-size-adjust: none;
-}
-
 /* Basic */
 
 @media screen and (max-width: 480px) {
@@ -83,14 +58,6 @@ html {
 
 *, *:before, *:after {
 	box-sizing: inherit;
-}
-
-body {
-	background-color: #2e3141;
-	background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
-	background-size: auto, cover;
-	background-attachment: fixed, fixed;
-	background-position: center, center;
 }
 
 body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -115,7 +82,6 @@ body.is-resizing *, body.is-resizing *:before, body.is-resizing *:after {
 
 body, input, select, textarea {
 	color: #a0a0a1;
-	font-family: "Source Sans Pro", Helvetica, sans-serif;
 	font-size: 15pt;
 	font-weight: 300;
 	letter-spacing: 0.025em;
@@ -228,25 +194,6 @@ hr.major {
 	margin: 3em 0;
 }
 
-/* Icon */
-
-.icon {
-	text-decoration: none;
-	border-bottom: none;
-	position: relative;
-}
-
-.icon:before {
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
-	font-style: normal;
-	text-transform: none !important;
-}
-
-.icon > .label {
-	display: none;
-}
-
 /* List */
 
 ol {
@@ -282,43 +229,6 @@ ul.alt li {
 ul.alt li:first-child {
 	border-top: 0;
 	padding-top: 0;
-}
-
-/* Icons */
-
-ul.icons {
-	cursor: default;
-	list-style: none;
-	padding-left: 0;
-}
-
-ul.icons li {
-	display: inline-block;
-	padding: 0 1em 0 0;
-}
-
-ul.icons li:last-child {
-	padding-right: 0;
-}
-
-ul.icons li .icon {
-	color: #505051;
-}
-
-ul.icons li .icon:before {
-	font-size: 1.5em;
-}
-
-a.fa-telegram:hover {
-	color: #08c !important;
-}
-
-a.fa-facebook:hover {
-	color: #4267b2 !important;
-}
-
-a.fa-users:hover {
-	color: white !important;
 }
 
 /* Panel */
@@ -694,119 +604,6 @@ body.is-preload #wrapper:before {
 	visibility: visible;
 }
 
-/* Header */
-
-body {
-	padding: 0 0 4em 0;
-}
-
-#header {
-	-moz-transform: translateY(0);
-	-webkit-transform: translateY(0);
-	transform: translateY(0);
-	-moz-transition: -moz-transform 1s ease;
-	-webkit-transition: -webkit-transform 1s ease;
-	transition: transform 1s ease;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	background: #1f2224;
-	bottom: -1em;
-	height: 5em;
-	left: 0;
-	line-height: 4em;
-	padding: 0 1.5em;
-	position: fixed;
-	user-select: none;
-	width: 100%;
-	z-index: 10002;
-}
-
-body.is-preload #header {
-	-moz-transform: translateY(4em);
-	-webkit-transform: translateY(4em);
-	transform: translateY(4em);
-}
-
-#header h1 {
-	color: #a0a0a1;
-	display: inline-block;
-	font-size: 1em;
-	line-height: 1;
-	margin: 0;
-	vertical-align: middle;
-}
-
-#header h1 a {
-	border: 0;
-	color: inherit;
-}
-
-#header h1 a:hover {
-	color: inherit !important;
-}
-
-#header nav {
-	position: absolute;
-	right: 0;
-	top: 0;
-}
-
-#header nav > ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-#header nav > ul > li {
-	display: inline-block;
-	padding: 0;
-}
-
-#header nav > ul > li a {
-	-moz-transition: background-color 0.5s ease;
-	-webkit-transition: background-color 0.5s ease;
-	transition: background-color 0.5s ease;
-	border: 0;
-	color: #ffffff;
-	display: inline-block;
-	letter-spacing: 0.1em;
-	padding: 0 1.65em;
-	text-transform: uppercase;
-}
-
-#header nav > ul > li a.icon:before {
-	color: #505051;
-	float: right;
-	margin-left: 0.75em;
-}
-
-#header nav > ul > li a:hover {
-	color: #ffffff !important;
-}
-
-#header nav > ul > li a.active {
-	background-color: #242629;
-}
-
-@media screen and (max-width: 736px) {
-
-	body.is-preload #header {
-		-moz-transform: translateY(-3.4em);
-		-webkit-transform: translateY(-3.4em);
-		transform: translateY(-3.4em);
-	}
-
-	#header h1 {
-		font-size: 0.9em;
-	}
-
-	#header nav > ul > li a {
-		font-size: 0.9em;
-		padding: 0 1.15em;
-	}
-
-}
-
 /* Main */
 
 #main {
@@ -864,7 +661,7 @@ body.is-preload #header {
 #main .thumb > h2 {
 	pointer-events: none;
 	bottom: 1.875em;
-	font-size: 0.8em;
+	font-size: 1.2em;
 	left: 2.1875em;
 	margin: 0;
 	position: absolute;
